API refactor stripping extra features
