# controllers/profile.controller.js
@@ -4,7 +4,7 @@ const prisma = require("../utils/db.utils");
 // user profile -- can be used for both facility an normal user.
 exports.getUserProfile = async (req, res) => {
   const user = req.user;
-  const profile = await prisma.userProfile.findUnique({
+  const profile = await prisma.profile.findUnique({
     where: {
       userId: user.id,
     },
@@ -13,31 +13,38 @@ exports.getUserProfile = async (req, res) => {
     return res.status(404).send({
       message: "profile requested not found!",
     });
-  } else {
-    return res.status(200).send(profile);
   }
+  return res.status(200).send(profile);
 };
 
 // works for -- normal user.
 exports.addUserProfile = async (req, res) => {
   const user = req.user;
-  const { name, dateOfBirth, bloodType } = req.body;
-  const profile = await prisma.userProfile.create({
+  const { name, dateOfBirth, bloodType, image, latitude, longitude } = req.body;
+  const image_url = await uploadImage(image);
+  if (!image_url) {
+    return res.status(500).send("Retry the image upload.");
+  }
+
+  const profile = await prisma.profile.create({
     data: {
       userId: user.id,
       name: name,
       dateOfBirth: dateOfBirth,
       bloodType: bloodType,
+      image: image_url,
+      latitude: latitude,
+      longitude: longitude,
     },
   });
   if (!profile) {
     return res.status(500).send({
-      message: "user profile failure",
+      message: "user profile creation failure",
       error: error,
     });
   } else {
     return res.status(201).send({
-      message: "profile created",
+      message: "profile created Success",
       profile: profile,
     });
   }
@@ -46,17 +53,7 @@ exports.addUserProfile = async (req, res) => {
 // works -- can be updated.
 exports.updateUserProfile = async (req, res) => {
   const user = req.user;
-  const {
-    name,
-    dateOfBirth,
-    bloodType,
-    avatar,
-    email,
-    streetName,
-    city,
-    country,
-    streetNumber,
-  } = req.body;
+  const { name, dateOfBirth, bloodType, avatar } = req.body;
   const newAvatar = uploadImage(avatar);
   if (!newAvatar) {
     return res.status(500).send({
@@ -69,14 +66,9 @@ exports.updateUserProfile = async (req, res) => {
     },
     data: {
       name: name,
-      email: email,
       avatar: newAvatar,
       dateOfBirth: dateOfBirth,
       bloodType: bloodType,
-      streetName: streetName,
-      streetNumber: streetNumber,
-      city: city,
-      country: country,
     },
   });
   if (!profile) {
@@ -86,131 +78,5 @@ exports.updateUserProfile = async (req, res) => {
     });
   } else {
     return res.status(200).send(profile);
-  }
-};
-// untested
-exports.deleteUserProfile = async (req, res) => {
-  const user = req.user;
-  try {
-    await prisma.userProfile.delete({
-      where: {
-        userId: user.id,
-      },
-    });
-    res.send(200).send({
-      message: "profile has been deleted",
-    });
-  } catch (err) {
-    console.log(err);
-    res.send({
-      message: "profile could not be deleted at this time try again later",
-    });
-  }
-};
-// ------------------------ Facility Profile --------------------------------------
-exports.createFacility = async (req, res) => {
-  const user = req.user;
-  const {
-    name,
-    mission,
-    streetName,
-    streetNumber,
-    license,
-    city,
-    country,
-    licenseNumber,
-  } = req.body;
-
-  const newLicense = uploadImage(license);
-  const facility = await prisma.facility.update({
-    where: {
-      email: user.email,
-    },
-    data: {
-      name: name,
-      mission: mission,
-      streetName: streetName,
-      streetNumber: streetNumber,
-      city: city,
-      license: newLicense,
-      country: country,
-      licenseNumber: licenseNumber,
-    },
-  });
-  if (!facility) {
-    return res.status(500).send({
-      message: "could not create facility profile",
-    });
-  } else {
-    return res.status(201).send({
-      message: "Facility Information Loaded.",
-    });
-  }
-};
-
-// We will have to verify manually.
-exports.verifyFacility = async (req, res) => {
-  const user = req.user;
-  const { licenseImage } = req.licenseImage;
-  if (user.role !== "FACILITYADMIN") {
-    return res.status(403).json({
-      message: "forbidden action!",
-    });
-  } else {
-    img = uploadImage(licenseImage);
-    const profile = await prisma.facility.update({
-      where: {
-        facilityId: parseInt(req.params.id),
-      },
-      data: {
-        license: img,
-        verified: true,
-      },
-    });
-    if (!profile) {
-      return res.status(500).json({
-        message: "an unexpected error occurred!",
-      });
-    }
-    res.status(200).send(profile);
-  }
-};
-
-exports.getFacility = async (req, res) => {
-  const profile = await prisma.facility.findUnique({
-    where: {
-      id: parseInt(req.params.id),
-    },
-  });
-  if (!profile) {
-    return res.status(404).send({
-      message: "facility profile unavailable!",
-    });
-  }
-  res.status(200).send(profile);
-};
-
-exports.deleteFacility = async (req, res) => {
-  const user = req.user;
-  if (user.role != "SUPERADMIN") {
-    return res.send({
-      message: "This action is out of reach, Haha.",
-    });
-  }
-
-  try {
-    await prisma.facility.delete({
-      where: {
-        facilityId: parseInt(req.params.id),
-      },
-    });
-    res.send(200).send({
-      message: "facility has been deleted!",
-    });
-  } catch (err) {
-    console.log(err);
-    res.send({
-      message: "facility could not be deleted at this time try again later!",
-    });
   }
 };
