# routes/profile.route.js
@@ -3,21 +3,10 @@ const {
   getUserProfile,
   addUserProfile,
   updateUserProfile,
-  deleteUserProfile,
-  createFacility,
-  verifyFacility,
-  getFacility,
-  deleteFacility,
 } = require("../controllers/profile.controller");
 const { isAuth } = require("../middlewares/auth.middleware");
 const router = express.Router();
-router.get("/user", isAuth, getUserProfile);
-router.post("/user", isAuth, addUserProfile);
-router.post("/update", isAuth, updateUserProfile);
-// router.delete("/delete", isAuth, deleteUserProfile);
-// Facility---------------------
-router.post("/facility", isAuth, createFacility);
-router.post("/verify", isAuth, verifyFacility);
-router.get("/:id", isAuth, getFacility);
-router.delete("/:id", isAuth, deleteFacility);
+router.get("/profiles", isAuth, getUserProfile);
+router.post("/profiles", isAuth, addUserProfile);
+router.post("/profiles/update", isAuth, updateUserProfile);
 module.exports = router;
