# swagger.json
@@ -1,89 +1,210 @@
 {
+  "swagger": "2.0",
   "info": {
     "title": "BloodCare API",
     "version": "1.0.0",
-    "description": "API for Dona Web and Client"
+    "description": "API for BloodShare Application"
   },
   "host": "localhost:5000",
-  "basePath": "/",
-  "swagger": "2.0",
+  "basePath": "/api",
+  "tags": {
+    "name": ["Users", "RegularFeed", "Donations", "EmergencyFeed", "Profiles"],
+    "description": "Super Charged API"
+  },
+  "produces": ["application/json"],
   "paths": {
-    "/auth/login": {
-      "post": {
-        "summary": "Login with email address",
-        "operationId": "emailLogin",
-        "description": "",
-        "parameters": {
-          "email": "johndoe@mail.com",
-          "in": "body",
-          "description": "login info",
-          "required": true,
-          "schema": {
-            "$ref": "#/definitions/User"
-          }
-        },
-        "produces": ["application/json"],
+    "/e-feeds": {
+      "get": {
+        "tags": ["EmergencyFeed"],
+        "summary": "List of Feeds",
         "responses": {
           "200": {
-            "description": "successful login",
-            "schema": {
-              "$ref": "#/definitions/User"
-            }
+            "description": "feeds fetched successfully"
+          },
+          "400": {
+            "description": "auth token not supplied."
+          },
+          "401": {
+            "description": "token provided not valid"
+          },
+          "500": {
+            "description": "Failed to fetch feeds"
+          }
+        }
+      },
+      "post": {
+        "tags": ["EmergencyFeed"],
+        "summary": "Share an Emergency Feed",
+        "responses": {
+          "201": {
+            "description": "Feed shared success"
+          },
+          "400": {
+            "description": "auth token not supplied."
+          },
+          "401": {
+            "description": "token provided not valid"
+          },
+          "500": {
+            "description": "Failed to fetch feeds"
           }
         }
       }
     },
-    "/auth/mobile-login": {
-      "post": {
-        "summary": "Login with mobile number",
-        "description": "",
-        "produces": ["application/json"],
+    "/donations": {
+      "get": {
+        "tags": ["Donations"],
+        "summary": "List of My Donations",
         "responses": {
           "200": {
-            "description": "successful login"
+            "description": "feeds fetched successfully"
+          },
+          "400": {
+            "description": "auth token not supplied."
+          },
+          "401": {
+            "description": "token provided not valid"
+          },
+          "500": {
+            "description": "Failed to fetch feeds"
+          }
+        }
+      },
+      "post": {
+        "tags": ["Donations"],
+        "summary": "Donated",
+        "responses": {
+          "201": {
+            "description": "I have donated"
+          },
+          "400": {
+            "description": "auth token not supplied."
+          },
+          "401": {
+            "description": "token provided not valid"
+          },
+          "500": {
+            "description": "Failed to fetch feeds"
+          }
+        }
+      }
+    },
+    "/feeds": {
+      "get": {
+        "tags": ["RegularFeed"],
+        "summary": "List of Feeds",
+        "responses": {
+          "200": {
+            "description": "feeds fetched successfully"
+          },
+          "400": {
+            "description": "auth token not supplied."
+          },
+          "401": {
+            "description": "token provided not valid"
+          },
+          "500": {
+            "description": "Failed to fetch feeds"
+          }
+        }
+      },
+      "post": {
+        "tags": ["RegularFeed"],
+        "summary": "Share a Feed",
+        "responses": {
+          "201": {
+            "description": "Feed shared success"
+          },
+          "400": {
+            "description": "auth token not supplied."
+          },
+          "401": {
+            "description": "token provided not valid"
+          },
+          "500": {
+            "description": "Failed to fetch feeds"
+          }
+        }
+      }
+    },
+    "/profiles": {
+      "get": {
+        "tags": ["Profiles"],
+        "summary": "User Profile",
+        "responses": {
+          "200": {
+            "description": "profile success"
+          },
+          "400": {
+            "description": "auth token not supplied."
+          },
+          "401": {
+            "description": "token provided not valid"
+          },
+          "500": {
+            "description": "Failed to fetch feeds"
+          }
+        }
+      },
+      "post": {
+        "tags": ["Profiles"],
+        "summary": "Create User Profile",
+        "responses": {
+          "201": {
+            "description": "profile creation success"
+          },
+          "400": {
+            "description": "auth token not supplied."
+          },
+          "500": {
+            "description": "Failed to fetch feeds"
+          }
+        }
+      }
+    },
+    "profiles/update": {
+      "tags": ["Profiles"],
+      "summary": "Update User Profile",
+      "responses": {
+        "200": {
+          "description": "profile update success"
+        },
+        "400": {
+          "description": "auth token not supplied."
+        },
+        "500": {
+          "description": "Failed to fetch feeds"
+        }
+      }
+    },
+    "/auth/login": {
+      "post": {
+        "tags": ["Users"],
+        "summary": "User Login",
+        "responses": {
+          "200": {
+            "description": "login success"
           }
         }
       }
     },
     "/auth/signup": {
       "post": {
-        "summary": "Signup with email address",
+        "tags": ["Users"],
+        "summary": "User Signup",
         "description": "",
         "produces": ["application/json"],
         "responses": {
-          "200": {
+          "201": {
             "description": "successful signup"
           }
         }
       }
     },
-    "/auth/mobile-signup": {
+    "/auth/verify": {
       "post": {
-        "summary": "Signup with mobile number",
-        "description": "",
-        "produces": ["application/json"],
-        "responses": {
-          "200": {
-            "description": "successful mobile signup"
-          }
-        }
-      }
-    },
-    "/register": {
-      "post": {
-        "summary": "Facility Registration",
-        "description": "",
-        "produces": ["application/json"],
-        "responses": {
-          "200": {
-            "description": "successful facility registration"
-          }
-        }
-      }
-    },
-    "/verify": {
-      "post": {
-        "summary": "Email Verification",
+        "tags": ["Users"],
+        "summary": "Otp Verification",
         "description": "",
         "produces": ["application/json"],
         "responses": {
@@ -93,8 +214,9 @@
         }
       }
     },
-    "/update-password": {
+    "/auth/password": {
       "post": {
+        "tags": ["Users"],
         "summary": "Password Update",
         "description": "",
         "produces": ["application/json"],
@@ -105,49 +227,119 @@
         }
       }
     },
-    "create-user": {
-      "post": {
-        "summary": "User Creation",
-        "description": "",
-        "produces": ["application/json"],
-        "responses": {
-          "200": {
-            "description": "successful user creation"
+    "definitions": {
+      "Donation": {
+        "required": ["donorId", "donorNumber", "facility"],
+        "properties": {
+          "id": {
+            "type": "integer",
+            "uniqueItems": true
+          },
+          "donorId": {
+            "$ref": "/#/definitions/User"
+          },
+          "donorNumber": {
+            "type": "string"
+          },
+          "facility": {
+            "type": "string"
           }
         }
+      },
+      "Donations": {
+        "type": "array",
+        "$ref": "/#/definitions/Donation"
+      },
+      "DonationFeed": {
+        "required": ["userId", "media", "description"],
+        "properties": {
+          "id": {
+            "type": "integer",
+            "uniqueItems": true
+          },
+          "userId": {
+            "$ref":"/#/definitions/User"
+          },
+          "media": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          }
+        }
+      },
+      "DonationFeeds": {
+        "type": "array",
+        "$ref": "/#/definitions/DonationFeed"
+      },
+      "Profile": {
+        "required": ["userId", "name", "avatar", "dateOfBirth", "bloodType", "latitude", "longitude"],
+        "properties": {
+          "id": {
+            "type": "integer",
+            "uniqueItems": true
+          },
+          "userId": {
+            "$ref": "/#/definitions/User"
+          },
+          "name": {
+            "type": "string"
+          },
+          "avatar": {
+            "type": "string"
+          },
+          "dateOfBirth": {
+            "type": "string"
+          },
+          "bloodType": {
+            "type": "string"
+          },
+          "latitude": {
+            "type": "string"
+          },
+          "longitude": {
+            "type": "string"
+          }
+        }
+      },
+      "EmergencyFeed": {
+        "required": ["userId", "description", "bloodType"],
+        "properties": {
+          "id": {
+            "type": "integer",
+            "uniqueItems": true
+          },
+          "description": {
+            "type": "string"
+          },
+          "bloodType": {
+            "type": "string"
+          }
+        }
+      },
+      "EmergencyFeeds": {
+        "type": "array",
+        "$ref": "/#/definitions/EmergencyFeed"
+      },
+      "User": {
+        "required": ["phoneNumber", "password"],
+        "properties": {
+          "id": {
+            "type": "integer",
+            "uniqueItems": true
+          },
+          "phoneNumber": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          }
+        }
+      },
+      "Users": {
+        "type": "array",
+        "$ref": "/#/definitions/User"
       }
     }
-  },
-  "definitions": {
-    "NewUser": {
-      "type": "object",
-      "allOf": [
-        {
-          "$ref": "#/definitions/User"
-        }
-      ]
-    }
-  },
-  "responses": {
-    "200": {
-      "description": "200 response"
-    },
-    "201": {
-      "description": "Created"
-    },
-    "401": {
-      "description": "Unauthorized"
-    },
-    "403": {
-      "description": "Bad Request"
-    },
-    "404": {
-      "description": "Not found"
-    },
-    "500": {
-      "description": "Internal Server Error"
-    }
-  },
-  "parameters": {},
-  "securityDefinitions": {}
+  }
 }
